attached_assets/Pasted--File-home-runner-workspace-main-py-line-1049-in-exec-1750893284211_1750893284212.txt
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/main.py", line 1049, in execute
    pm_output = self.product_manager.process(current_input)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/main.py", line 44, in process
    parsed = etree.fromstring(input_xml.encode())
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "src/lxml/etree.pyx", line 3257, in lxml.etree.fromstring
  File "src/lxml/parser.pxi", line 1916, in lxml.etree._parseMemoryDocument
  File "src/lxml/parser.pxi", line 1803, in lxml.etree._parseDoc
  File "src/lxml/parser.pxi", line 1144, in lxml.etree._BaseParser._parseDoc
  File "src/lxml/parser.pxi", line 618, in lxml.etree._ParserContext._handleParseResultDoc
  File "src/lxml/parser.pxi", line 728, in lxml.etree._handleParseResult
  File "src/lxml/parser.pxi", line 657, in lxml.etree._raiseParseError
  File "<string>", line 43
lxml.etree.XMLSyntaxError: Opening and ending tag mismatch: text line 5 and Content, line 43, column 21
INFO:werkzeug:127.0.0.1 - - [25/Jun/2025 23:00:47] "POST /api/process HTTP/1.1" 500 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:04:59] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:04:59] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:10:01] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:10:01] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:10:01] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:10:01] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:10:02] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:10:02] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:10:02] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:10:02] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:10:02] "GET / HTTP/1.1" 404 -
INFO:werkzeug:172.31.128.46 - - [25/Jun/2025 23:10:43] "GET / HTTP/1.1" 404 -
INFO:__main__:📥 Received document content: <input><text>Here&apos;s the natural language version of the Hudsons Furniture Company perspective from the partnership proposal, without any special characters or XML formatting:

**Hudsons Furniture...
INFO:__main__:🚀 Starting X-Agent pipeline execution...
INFO:__main__:🔍 Step 1: Document Analysis (runs once)
INFO:__main__:🔍 Debugging XML content...
INFO:__main__:📋 Step 2: Starting PM → Task Manager → Scrum Master cycle
INFO:__main__:
--- Iteration 1 ---
INFO:__main__:📋 Product Manager: Creating/updating requirements
ERROR:__main__:API error: Opening and ending tag mismatch: text line 5 and Content, line 62, column 161 (<string>, line 62)
Traceback (most recent call last):
  File "/home/runner/workspace/main.py", line 1368, in process_document
    try:
         
  File "/home/runner/workspace/main.py", line 1049, in execute
    # Step 2: PM → Task Manager → Scrum Master cycle
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/main.py", line 44, in process
    parsed = etree.fromstring(input_xml.encode())
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "src/lxml/etree.pyx", line 3257, in lxml.etree.fromstring
  File "src/lxml/parser.pxi", line 1916, in lxml.etree._parseMemoryDocument
  File "src/lxml/parser.pxi", line 1803, in lxml.etree._parseDoc
  File "src/lxml/parser.pxi", line 1144, in lxml.etree._BaseParser._parseDoc
  File "src/lxml/parser.pxi", line 618, in lxml.etree._ParserContext._handleParseResultDoc
  File "src/lxml/parser.pxi", line 728, in lxml.etree._handleParseResult
  File "src/lxml/parser.pxi", line 657, in lxml.etree._raiseParseError
  File "<string>", line 62
lxml.etree.XMLSyntaxError: Opening and ending tag mismatch: text line 5 and Content, line 62, column 161
INFO:werkzeug:127.0.0.1 - - [25/Jun/2025 23:11:11] "POST /api/process HTTP/1.1" 500 -
